k8s/operations/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: operations
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "2147483647"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "2147483647"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "2147483647"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /headlamp
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
